# ResFlow

./: Architecture.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/requiremts/: base.txt  dev.txt
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/routes/: __init__.py  health.py
backend/src/core/: config.py  constants.py  logger.py
backend/src/database/: session.py
docs/: 00_Project_Vision.md  01_Product_Requirements.md  02_System_Architecture.md  03_Agent_Architecture.md  04_Database_Design.md  05_API_Design.md  06_Development_Guide.md
