[project]
name = "resflow-backend"
version = "0.1.0"
description = "Backend for ResearchFlow AI"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "python-dotenv",
    "pydantic>=2.8",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"